Fixed Trumbowyg Z-Index bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -241,6 +241,10 @@ html, body {
     min-width: 17rem;
 }
 
+.trumbowyg {
+    z-index: -1!important;
+}
+
 /* Vuln View CSS */
 #detailsTab {
     font-size: 1.2rem;
